Populated file and updated test files with content